# core

./: LICENSE  README.md  pyproject.toml  setup.cfg
core/: settings.py
core/entities/: __init__.py  base.py  chat.py  chat_group.py  message.py  participant.py  user.py
core/misc/auth/: jwt.py  storage.py
core/repos/: __init__.py  abc.py  base.py  chat.py  chat_group.py  message.py  participant.py  user.py
core/services/: __init__.py  auth.py  messenger.py  registration.py
core/tests/: builders.py  creators.py  utils.py
core/tests/fixtures/: repos.py  services.py
tests/: conftest.py
tests/unit/repos/: test_base.py  test_chat.py  test_chat_group.py  test_message.py  test_user.py
tests/unit/services/: test_auth.py  test_messenger.py  test_registration.py
