[project]
name = "core"
version = "0.1.0"
description = ""
authors = [
    {name = "Egor Bogdanov",email = "ro9aine@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic (>=2.11.9,<3.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "multipledispatch (>=1.0.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-s -v"


[tool.flake8]
max-line-length = 140
ignore = []