[project]
name = "core"
version = "0.1.0"
description = ""
authors = [
    {name = "Egor Bogdanov",email = "ro9aine@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic (>=2.11.9,<3.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "multipledispatch (>=1.0.0,<2.0.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "types-python-jose (>=3.5.0.20250531,<4.0.0.0)",
    "types-passlib (>=1.7.7.20250602,<2.0.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-s -v"
