[project]
name = "core"
version = "0.1.0"
description = ""
authors = [
    {name = "Egor Bogdanov",email = "ro9aine@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.11"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.11.9"
pytest = "^8.4.2"
multipledispatch = "^1.0.0"
mypy = "^1.18.2"
python-jose = { version = "^3.5.0", extras = ["cryptography"] }
passlib = { version = "^1.7.4", extras = ["bcrypt"] }
python-multipart = "^0.0.20"
types-python-jose = "^3.5.0.20250531"
types-passlib = "^1.7.7.20250602"
pydantic-settings = "^2.11.0"
db = { git = "https://github.com/spmessenger/db.git", branch = "main" }



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-s -v"
